# flowstate

./: .gitignore  CMakeLists.txt  FLOWSTATE_TODO.md  LICENSE-EXCEPTION  README.md  build.bat  build_all.bat  build_log.txt  build_version.bat  clean.bat  dev.bat  dev_2027.bat  install_flowstate.ms  logo_lines.txt
macros/: CloneTools-FlowState_Config.mcr  FlowState_Config.mcr  SmoothBridge.mcr  flowstate_config.ms  self_install_pattern.md
src/: FlowState.def  PowerParams.def  Walker.def  dllmain.cpp  flowstate.cpp  flowstate.rc  inline_mcr.inc  modstack.cpp  modstack.h  powershader.cpp  powershader.h  resource.h
src/modifiers/loop_subdivision/: loop_subdivision.cpp  loop_subdivision.h  loop_subdivision.rc  loop_subdivision_resource.h
src/normalize_edges/: f2_extend_tool.cpp  normalize_poly.cpp  normalize_poly.def  normalize_poly.h  normalize_poly.rc  resource.h  smooth_bridge_tool.cpp
src/powercut/: DebugLog.h  MeshCutter.cpp  MeshCutter.h  PowerCut.def  PowerCut.rc  PowerCutDesc.h  PowerCutMod.cpp  PowerCutMod.h  dllmain.cpp  resource.h
src/precisioncut/: DebugLog.h  PrecisionCut.def  PrecisionCutDesc.h  PrecisionCutMod.cpp  PrecisionCutMod.h  SplineProjector.cpp  SplineProjector.h  dllmain.cpp
tests/: README.md  config_editor_smoke.py  loop_subdivision_smoke.ms  powerparams_multishape_smoke.ms
